--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 			<p class="result-message"></p>
 			<div id="label-container"></div>
 			<div class="image-title-wrap">
-				<button type="button" onclick="removeUpload()" class="remove-image">Remove
-					<span class="image-title">Uploaded Image</span>
+				<button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 다시하기
 				</button>
 			</div>
 		</div>
@@ -97,9 +96,7 @@
 		}
 
 		function removeUpload() {
-			$('.file-upload-input').replaceWith($('.file-upload-input').clone());
-			$('.file-upload-content').hide();
-			$('.image-upload-wrap').show();
+			window.location.reload();
 		}
 		$('.image-upload-wrap').bind('dragover', function() {
 			$('.image-upload-wrap').addClass('image-dropping');
@@ -107,6 +104,7 @@
 		$('.image-upload-wrap').bind('dragleave', function() {
 			$('.image-upload-wrap').removeClass('image-dropping');
 		});
+		
 	</script>
 	<script type="text/javascript">
 		// More API functions here:
