--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
 				</button>
 			</div>
 			<div class="row">
-				<div class="column" id="country1" style="display: none;"> <img id="flag1" src="" alt="country flag" height="150" width="150"> </div>
+				<div class="column" id="country1" style="display: none;">
+					<img id="flag1" src="" alt="country flag" height="150" width="150"> </div>
 				<div class="column">
 					<img class="file-upload-image" id="face-image" src="#" alt="your image" />
-				</div>	
-				<div class="column" id="country2" style="display: none;"> <img id="flag2" src="" alt="country flag" height="150" width="150">
+				</div>
+				<div class="column" id="country2" style="display: none;">
+					<img id="flag2" src="" alt="country flag" height="150" width="150">
 				</div>
 			</div>
-			
+
 			<div id="loading" class="animated bounce" style="display: none;">
 				로딩중..
 			</div>
@@ -89,6 +91,30 @@
 	</div>
 
 	<div id="webcam-container"></div>
+
+	<div class="comment" id="disqus_thread"></div>
+	<script>
+		/**
+		 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+		 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+		/*
+		var disqus_config = function () {
+		this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+		this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+		};
+		*/
+		(function() { // DON'T EDIT BELOW THIS LINE
+			var d = document,
+				s = d.createElement('script');
+			s.src = 'https://countryface.disqus.com/embed.js';
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
+		})();
+	</script>
+	<noscript>Please enable JavaScript to view the
+		<a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+	</noscript>
+
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -234,7 +260,7 @@
 					resultMessage = "알수없음"
 			}
 			$('.result-message').html(resultMessage);
-		    $('#country1').show();
+			$('#country1').show();
 			$('#country2').show();
 			for (let i = 0; i < maxPredictions; i++) {
 				const classPrediction =
