--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 	<title>석준이의 코딩 세상</title>
 	<link rel="stylesheet" href="style.css">
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
+	<!-- Go to www.addthis.com/dashboard to customize your tools -->
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
 
 </head>
 
@@ -44,7 +45,7 @@
 
 	<section class="section">
 		<h1 class="title">
-			나라별 얼굴 상
+			나라별 인기 있는 얼굴 상
 		</h1>
 		<h2 class="subtitle">
 			AI가 보는 나는 어느 나라에서 인기가 많을까?
@@ -76,14 +77,20 @@
 				</div>
 			</div>
 
-			<div id="loading" class="animated bounce" style="display: none;">
-				로딩중..
+			<div class="wrapperloading" style="display: none;">
+				<div class="text">AI가 당신의 얼굴상을 분석하고 있습니다..</div>
+				<div class="inner">
+					<div class="loading up"></div>
+					<div class="loading down"></div>
+				</div>
 			</div>
+
 			<p class="result-message"></p>
 			<div id="label-container"></div>
 		</div>
 
-		<!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="addthis_inline_share_toolbox_iaic" ></div>
+		<!-- Go to www.addthis.com/dashboard to customize your tools -->
+		<div class="addthis_inline_share_toolbox_iaic"></div>
 
 		<button class="start" type="button" onclick="init()" style="display: none;">시작하기</button>
 	</div>
@@ -91,6 +98,7 @@
 	<div id="webcam-container"></div>
 
 	<div class="comment" id="disqus_thread"></div>
+
 	<script>
 		/**
 		 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -154,7 +162,7 @@
 		let model, webcam, labelContainer, maxPredictions;
 		// Load the image model and setup the webcam
 		async function init() {
-			$('#loading').show();
+			$('.wrapperloading').show();
 			const modelURL = URL + "model.json";
 			const metadataURL = URL + "metadata.json";
 			// load the model and metadata
@@ -175,7 +183,7 @@
 			var image = document.getElementById("face-image")
 			const prediction = await model.predict(image, false);
 			prediction.sort((a, b) => parseFloat(b.probability) - parseFloat(a.probability));
-			$('#loading').hide();
+			$('.wrapperloading').hide();
 			$('.addthis_inline_share_toolbox_iaic').show();
 			var resultMessage;
 			switch (prediction[0].className) {
