--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 					document.getElementById("flag1").src = "Flags/Germany.png";
 					document.getElementById("flag2").src = "Flags/Germany.png";
 					break;
-				case "U.K.":
+				case "UK":
 					resultMessage = "영국에서 인기 있는 상"
 					document.getElementById("flag1").src = "Flags/UK.png";
 					document.getElementById("flag2").src = "Flags/UK.png";
