--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" sizes="16x16" />
+
+	<link rel="icon" href="Webp.net-resizeimage (2).png" sizes="16x16" />
 
 </head>
 
