--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
 
 	<div class="comment" id="disqus_thread"></div>
 
+	<ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-1jydrf0ssw677" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+	
+	
 	<footer class="footer text-center">
 		<div class="container">
 			<ul class="list-inline">
