--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>나라별 인기 얼굴</title>
-	
+
 	<link rel="stylesheet" href="style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
@@ -115,14 +115,13 @@
 
 	<div class="comment" id="disqus_thread"></div>
 
-	<ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-1jydrf0ssw677" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-	
-	
+
 	<footer class="footer text-center">
+		<div class="advertisement">
+		<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1jydrf0ssw677" data-ad-width="320" data-ad-height="100"></ins>
+		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+		</div>
+		
 		<div class="container">
 			<ul class="list-inline">
 				<li class="list-inline-item">
@@ -228,8 +227,8 @@
 			labelContainer = document.getElementById("label-container");
 			for (let i = 0; i < maxPredictions; i++) {
 				var element = document.createElement("div")
-                element.classList.add("d-flex");
-                labelContainer.appendChild(element);
+				element.classList.add("d-flex");
+				labelContainer.appendChild(element);
 				predict();
 			}
 		}
@@ -327,66 +326,65 @@
 			$('#country2').show();
 			for (let i = 0; i < 5; i++) {
 				if (prediction[i].probability.toFixed(2) > 0.1) {
-                    barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + "%";
-                } else if (prediction[i].probability.toFixed(2) >= 0.01) {
-                    barWidth = "4%"
-                } else {
-                    barWidth = "2%"
-                }
-                var labelTitle;
-                switch (prediction[i].className) {
-                    case "USA":
-                        labelTitle = "미국"
-                        break;
-                    case "Korea":
-                        labelTitle = "한국"
-                        break;
-                    case "Japan":
-                        labelTitle = "일본"
-                        break;
-                    case "UK":
-                        labelTitle = "영국"
-                        break;
-                    case "India":
-                        labelTitle = "인도"
-                        break;
-                    case "Mexico":
-                        labelTitle = "멕시코"
-                        break;
-                    case "Brazil":
-                        labelTitle = "브라질"
-                        break;
+					barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + "%";
+				} else if (prediction[i].probability.toFixed(2) >= 0.01) {
+					barWidth = "4%"
+				} else {
+					barWidth = "2%"
+				}
+				var labelTitle;
+				switch (prediction[i].className) {
+					case "USA":
+						labelTitle = "미국"
+						break;
+					case "Korea":
+						labelTitle = "한국"
+						break;
+					case "Japan":
+						labelTitle = "일본"
+						break;
+					case "UK":
+						labelTitle = "영국"
+						break;
+					case "India":
+						labelTitle = "인도"
+						break;
+					case "Mexico":
+						labelTitle = "멕시코"
+						break;
+					case "Brazil":
+						labelTitle = "브라질"
+						break;
 					case "France":
-                        labelTitle = "프랑스"
-                        break;
+						labelTitle = "프랑스"
+						break;
 					case "Spain":
-                        labelTitle = "스페인"
-                        break;
+						labelTitle = "스페인"
+						break;
 					case "Italy":
-                        labelTitle = "이탈리아"
-                        break;
+						labelTitle = "이탈리아"
+						break;
 					case "China":
-                        labelTitle = "중국"
-                        break;
+						labelTitle = "중국"
+						break;
 					case "Germany":
-                        labelTitle = "독일"
+						labelTitle = "독일"
 						break;
 					case "Russia":
-                        labelTitle = "러시아"
-                        break;
+						labelTitle = "러시아"
+						break;
 					case "Arab":
-                        labelTitle = "아랍"
-                        break;
+						labelTitle = "아랍"
+						break;
 					case "Canada":
-                        labelTitle = "캐나다"
-                        break;
-                    default:
-                        labelTitle = "알수없음"
-                }
-				
+						labelTitle = "캐나다"
+						break;
+					default:
+						labelTitle = "알수없음"
+				}
 				var label = "<div class='animal-label d-flex align-items-center'>" + labelTitle + "</div>"
-                var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
-                labelContainer.childNodes[i].innerHTML = label + bar;
+				var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
+				labelContainer.childNodes[i].innerHTML = label + bar;
 			}
 		}
 	</script>
