--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb7fd59e5163dee"></script>
 
 	<link rel="icon" href="Webp.net-resizeimage (2).png" sizes="16x16" />
+	<script data-ad-client="ca-pub-8225214401653078" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 
@@ -143,6 +144,9 @@
 			<p class="text-muted small mb-0">Copyright © CountryFace 2020</p>
 			<p class="text-muted small mb-0">Designed by
 				<a href="https://portfoliosimulator.netlify.app/" target="_balnk">John Hong</a>
+			</p>
+			<p class="help">
+				제작도움: <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">조코딩 유튜브 채널</a>
 			</p>
 		</div>
 	</footer>
