--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="naver-site-verification" content="64227dd9ddbd8fd00b1a95d730c5834e6dbbfa9d" />
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -50,7 +51,7 @@
 
 	<section class="section">
 		<h1 class="title">
-			나라별 인기 있는 얼굴 상
+			나라별 <u>인기 있는</u> 얼굴 상
 		</h1>
 		<h2 class="subtitle">
 			AI가 보는 나는 어느 나라에서 인기가 많을까?
