--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="naver-site-verification" content="64227dd9ddbd8fd00b1a95d730c5834e6dbbfa9d" />
+	<meta name="description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다. 본인의 얼굴을 찍어 올리게 되면 AI가 사진을 분석해 어느나라에서 가장 인기있는 얼굴 상인지 알려줍니다. 사진과 같은 개인정보가 수집되지 않으니 마음 놓고 즐겨보세요!">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
+	<link rel="canonical" href="https://www.countrybyface.com/">
 
 	<!-- favicon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
