--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="naver-site-verification" content="64227dd9ddbd8fd00b1a95d730c5834e6dbbfa9d" />
-	<meta name="description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다. 본인의 얼굴을 찍어 올리게 되면 AI가 사진을 분석해 어느나라에서 가장 인기있는 얼굴 상인지 알려줍니다.">
+	<meta name="description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 	<!-- open graphic -->
 	<meta property="og:type" content="website"> 
 	<meta property="og:title" content="나라별 인기 얼굴">
-	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다. 본인의 얼굴을 찍어 올리게 되면 AI가 사진을 분석해 어느나라에서 가장 인기있는 얼굴 상인지 알려줍니다.">
+	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
 	<meta property="og:image" content="opengraph.png">
 	<meta property="og:url" content="https://www.countrybyface.com/">
 
