--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
 	<link rel="canonical" href="https://www.countrybyface.com/">
-	
+
 	<!-- open graphic -->
-	<meta property="og:type" content="website"> 
+	<meta property="og:type" content="website">
 	<meta property="og:title" content="나라별 인기 얼굴">
 	<meta property="og:description" content="구글 AI를 활용하여 만든 나라별 인기 얼굴 사이트 입니다.">
 	<meta property="og:image" content="opengraph.png">
@@ -32,18 +32,20 @@
 	<link rel="icon" href="icon.png" sizes="16x16" />
 	<script data-ad-client="ca-pub-8225214401653078" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+	<meta charset="UTF-8">
+	<title>copyright</title>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light nav-distance">
-		<a class="navbar-brand" href="https://countryface.netlify.app/">나는 어느나라에서 호감상 일까?</a>
+		<a class="navbar-brand" href="https://www.countrybyface.com/">나는 어느나라에서 호감상 일까?</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://countryface.netlify.app/">홈
+					<a class="nav-link" href="https://www.countrybyface.com/">홈
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
@@ -60,7 +62,8 @@
 
 	<section class="section">
 		<h1 class="title">
-			나라별 <u>인기 있는</u> 얼굴 상
+			나라별
+			<u>인기 있는</u> 얼굴 상
 		</h1>
 		<h2 class="subtitle">
 			AI가 보는 나는 어느 나라에서 인기가 많을까?
@@ -126,13 +129,12 @@
 
 	<div class="comment" id="disqus_thread"></div>
 
-
 	<footer class="footer text-center">
 		<div class="advertisement">
-		<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1jydrf0ssw677" data-ad-width="320" data-ad-height="100"></ins>
-		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+			<ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-1jydrf0ssw677" data-ad-width="320" data-ad-height="100"></ins>
+			<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		</div>
-		
+
 		<div class="container">
 			<ul class="list-inline">
 				<li class="list-inline-item">
@@ -155,9 +157,12 @@
 			<p class="text-muted small mb-0">Designed by
 				<a href="https://portfoliosimulator.netlify.app/" target="_balnk">John Hong</a>
 			</p>
-			<p class="help">
-				제작도움: <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">조코딩 유튜브 채널</a>
-			</p>
+			<section class="youtube pb-3">
+				<div class="container mt-3">
+					<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작 도움: 조코딩 유튜브 채널</a>
+					<img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon">
+				</div>
+			</section>
 		</div>
 	</footer>
 
@@ -421,5 +426,18 @@ Permission is hereby granted, free of charge, to any person obtaining a copy of 
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
+
+<!-- 
+image input box
+Copyright (c) 2020 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+gender toggle
+Copyright (c) 2020 by Mert Cukuren (https://codepen.io/knyttneve/pen/bPpEZY)
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ -->
 
 </html>
