--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">구글 AI</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">개인정보처리방침</a>
+				</li>
 			</ul>
 		</div>
 	</nav>
