--- a/index.html
+++ b/index.html
@@ -73,15 +73,19 @@
 		</h2>
 	</section>
 
-	<div class="genderPosition">
-		<input type="checkbox" id="gender">
-		<label for="gender">
-			<span class="knob">
-				<i></i>
-			</span>
-		</label>
-	</div>
-
+	<section class="d-flex justify-content-center" style="margin-bottom: 30px">
+        <p class="d-flex align-items-center pr-3">여자</p>
+        <div>
+            <input type="checkbox" id="gender">
+            <label for="gender">
+                <span class="knob">
+                    <i></i>
+                </span>
+            </label>
+        </div>
+        <p class="d-flex align-items-center pl-3">남자</p>
+    </section>
+	
 	<div class="file-upload">
 		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">사진 넣기</button>
 
