--- a/en/index.html
+++ b/en/index.html
@@ -81,7 +81,7 @@
     <script>
         var ua = navigator.userAgent.toLowerCase();
         function changeLanguage(lang) {
-			if(lang.value == "한국어") {
+			if(lang.value == "ko") {
 				window.open("https://www.countrybyface.com/");
 			}
             if( ( navigator.userAgent.indexOf('Mac OS') > 0 && navigator.userAgent.indexOf('Safari') <= 0 ) || ( ( navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('wv)') > 0 ) ) ){
