--- a/en.html
+++ b/en.html
@@ -23,7 +23,7 @@
 	<!-- favicon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<title>Ideal face type by country</title>
+	<title>나라별 인기 얼굴</title>
 
 	<link rel="stylesheet" href="style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -45,18 +45,18 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="https://www.countrybyface.com/">Home
+					<a class="nav-link" href="https://www.countrybyface.com/">홈
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Data Base</a>
+					<a class="nav-link" href="#">Data base</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">Google AI</a>
+					<a class="nav-link" href="https://teachablemachine.withgoogle.com/">구글 AI</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">Privacy Policy</a>
+					<a class="nav-link" href="https://www.countrybyface.com/privacy.html">개인정보처리방침</a>
 				</li>
 			</ul>
 		</div>
@@ -81,14 +81,14 @@
         function changeLanguage(lang) {
             if( ( navigator.userAgent.indexOf('Mac OS') > 0 && navigator.userAgent.indexOf('Safari') <= 0 ) || ( ( navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('wv)') > 0 ) ) ){
                 if (ua.match('android') != null) {
-                    window.open("googlechrome://navigate?url=countrybyface.com"+lang.value+"/index.html"); //android
+                    window.open("googlechrome://navigate?url=countrybyface.com"+lang.value+".html"); //android
                 } else if (ua.indexOf("iphone")>-1||ua.indexOf("ipad")>-1||ua.indexOf("ipod")>-1) { 
-                    window.location.href = "https://www.countrybyface.com/"+lang.value+"/index.html";
+                    window.location.href = "https://www.countrybyface.com/"+lang.value+".html";
                 } else {
-                    window.location.href = "https://www.countrybyface.com/"+lang.value+"/index.html";
+                    window.location.href = "https://www.countrybyface.com/"+lang.value+".html";
                 }
             } else {
-                window.location.href = "https://www.countrybyface.com/"+lang.value+"/index.html";
+                window.location.href = "https://www.countrybyface.com/"+lang.value+".html";
             }
         }
     </script>
@@ -108,7 +108,7 @@
 	</section>
 
 	<section class="d-flex justify-content-center" style="margin-bottom: 30px">
-        <p class="d-flex align-items-center pr-3">Female</p>
+        <p class="d-flex align-items-center pr-3">여자</p>
         <div>
             <input type="checkbox" id="gender">
             <label for="gender">
@@ -117,21 +117,21 @@
                 </span>
             </label>
         </div>
-        <p class="d-flex align-items-center pl-3">Male</p>
+        <p class="d-flex align-items-center pl-3">남자</p>
     </section>
 	
 	<div class="file-upload">
-		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Insert photo</button>
+		<button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">사진 넣기</button>
 
 		<div class="image-upload-wrap">
 			<input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
 			<div class="drag-text">
-				<h3>Drag and drop here to upload your photo!</h3>
+				<h3>사진을 올려 놓으세요!</h3>
 			</div>
 		</div>
 		<div class="file-upload-content">
 			<div class="image-title-wrap">
-				<button type="button" onclick="removeUpload()" class="remove-image">Try again
+				<button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 다시하기
 				</button>
 			</div>
 			<div class="row">
