--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
         function changeLanguage(lang) {
             if( ( navigator.userAgent.indexOf('Mac OS') > 0 && navigator.userAgent.indexOf('Safari') <= 0 ) || ( ( navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('wv)') > 0 ) ) ){
                 if (ua.match('android') != null) {
-                    window.open("googlechrome://navigate?url=countrybyface.com"+lang.value+"/index.html"); //android
+                    window.open("googlechrome://navigate?url=countrybyface.com"+lang.value+".html"); //android
                 } else if (ua.indexOf("iphone")>-1||ua.indexOf("ipad")>-1||ua.indexOf("ipod")>-1) { 
-                    window.location.href = "https://www.countrybyface.com/"+lang.value+"/index.html";
+                    window.location.href = "https://www.countrybyface.com/"+lang.value+".html";
                 } else {
-                    window.location.href = "https://www.countrybyface.com/"+lang.value+"/index.html";
+                    window.location.href = "https://www.countrybyface.com/"+lang.value+".html";
                 }
             } else {
-                window.location.href = "https://www.countrybyface.com/"+lang.value+"/index.html";
+                window.location.href = "https://www.countrybyface.com/"+lang.value+".html";
             }
         }
     </script>
