--- a/en.html
+++ b/en.html
@@ -80,7 +80,7 @@
         var ua = navigator.userAgent.toLowerCase();
         function changeLanguage(lang) {
 			if (lang.value = "ko") {
-				window.open("https://www.countrybyface.com/");
+				window.location.href = "https://www.countrybyface.com/";
 			}
             if( ( navigator.userAgent.indexOf('Mac OS') > 0 && navigator.userAgent.indexOf('Safari') <= 0 ) || ( ( navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('wv)') > 0 ) ) ){
                 if (ua.match('android') != null) {
